--- a/about.Rmd
+++ b/about.Rmd
@@ -253,9 +253,11 @@ His research interests are the pathophysiology of biomaterials used in medicine,
 
 \
 
-### David Kalfa, MD, PhD\
+
 
 ![](images/kalfa.jpg){width=25%}
+
+### David Kalfa, MD, PhD\
 
 Florence Irving Assistant Professor of Surgery\
 Section of Pediatric & Congenital Cardiac Surgery\
@@ -275,12 +277,11 @@ The proposed research is relevant to public health because a biostable polymeric
 
 \
 
+![](images/sacks.jpg){width=25%}
 
 ### Micheal S Sacks PhD\
 
 *University of Texas at Austin*
-
-![](images/sacks.jpg){width=25%}
 
 The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. Due to the widespread availability and routine use of screening echocardiography, development of clinical methods for the identification of asymptomatic young patients with BAV is now realistic. We thus plan to develop sensitive, clinically derivable functional indices that will yield clinically relevant patient- specific strategies for identifying BAV patients at high risk.\
 
@@ -292,6 +293,8 @@ The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. D
 
 \
 
+![](images/Lara-Gharibeh.jpg){width=25%}
+
 ### Lara Garibeh PhD\
 
 *University of Ottawa Heart Institute*
@@ -299,7 +302,6 @@ The bicuspid aortic valve (BAV) is the most common cardiac congenital anomaly. D
 *Canadian Institute of Research and Health (CIHR) Fellowship (2021-2023)*\
 
 
-![](images/Lara-Gharibeh.jpg){width=25%}
 
 Identification of Molecular Pathways that Protect Against Atherosclerosis
 Coronary artery disease (CAD) is one of the leading causes of cardiovascular death worldwide. Current treatments for CAD include lifestyle modifications and medical therapies to reduce its risk factors. When these methods fail, more invasive interventions, such as placement of a stent to restore blood flow or performance of a coronary artery bypass graft surgery, are used. This latter procedure aims at bypassing the blocked area using either veins or arteries. The use of arterial grafts is associated with a better long-term patency and a reduced rate of progression of atherosclerosis when compared to vein grafts. Yet, the exact molecular mechanisms by which arteries are protected from disease progression are not well understood. This study aims to identify the underlying mechanisms that render arteries resistant to atherosclerosis.\
@@ -308,28 +310,25 @@ Coronary artery disease (CAD) is one of the leading causes of cardiovascular dea
 
 \
 
+![](images/grau.jpg){width=25%}
+
 ### Juan B Grau MD\
 
 *The Valley Hospital *
 
-![](images/grau.jpg){width=25%}
 
 Dr. Grau's work blends clinical knowledge and expertise with the tools of basic science to find new approaches to clinically relevant problems. He serves as a reviewer for the Annals of Thoracic Surgery, Journal of the American Heart Association, Circulation, and the British Heart Foundation, among others.\
 
 
 \
 
-
+![](images/witschey_walter.jpg){width=25%}
 
 ### Walter R. Witschey, PhD\
 
-*University of Pennsylvania*
+*University of Pennsylvania*\
 Associate Professor of Radiology\
 Director of the Advanced Cardiovascular Imaging Lab at the University of Pennsylvania\
-
-
-![](images/witschey_walter.jpg){width=25%}
-
 
 Theoretical and applied advanced imaging, especially magnetic resonance imaging and quantitative cardiovascular imaging.
 
